# BorylXAT-DB

./: .gitignore  .zenodo.json  1_Calc_Reactant.ipynb  2_Calc_TS.ipynb  3_Analysis.ipynb  3_Build_DataBase.ipynb  4_Benchmark.ipynb  4_Build_DataBase.ipynb  5_Benchmark.ipynb  5_Modeling.ipynb  5_Modeling_xTB.ipynb  5_draw_molecule.ipynb  6_Modeling.ipynb  7_QHARM_Thermodynamic_Filter_Coverage.ipynb  CHANGELOG.md  CITATION.cff  Database_Structure.md  Introduction_中文初稿_DigitalDiscovery.md  JACSExperiment.ipynb  LICENSE  README.md  SI_temp.txt  descriptor.py  descriptors2.ipynb  environment.yml  main.py  pyproject.toml  requirements.txt  revision_JACS_Experiment.ipynb  revision_basis_set_bond_length_comparison.ipynb  revision_export_qharm_to_csv.ipynb  revision_extended_qharm_free_energy.ipynb  revision_ml_baseline_ablation_bep_dependence.ipynb  revision_qharm_barrier_analysis.ipynb  revision_qharm_modeling.ipynb  revision_quasi_harmonic_free_energy.ipynb  revision_spin_contamination_outlier_association.ipynb  revision_thermodynamic_filter_BEP_ML.ipynb  revision_xtb_export_descriptor_structures.ipynb  test.ipynb
.github/workflows/: release.yml
DFTStructureGenerator/: B_N_Cl.py  Build_DataBase.py  FormatConverter.py  Tool.py  borane_xat_workflow.py  descriptor.py  draw.py  gendes.py  logfile_process.py  mol_manipulation.py  project_paths.py  thermochemistry.py  xtb_process.py
Data/ChemDraw/: Anime.cdxml  Ar.cdxml  Borane.cdxml  Cl.cdxml  NHC.cdxml  (+1 more)
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
docs/: BorylXAT-DB_DigitalDiscovery_English_draft.md
(+92 files in other folders)
